# pure-app-challenge

./: .env  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: tests.yml
app/app/: settings.py  urls.py
app/common/: models.py
app/schedule/: constants.py  filters.py  models.py  serializers.py  urls.py  views.py
app/schedule/migrations/: 0001_add_class.py  0002_add_student.py  0003_add_teacher.py  0004_add_subject.py  0005_add_schedule.py
tests/: test_hello_world.py
tests/schedule/: conftest.py  factories.py  test_views.py
